--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-signon-plugin-oauth2 (0.14bzr13.01.21-0ubuntu1) UNRELEASED; urgency=low
+signon-plugin-oauth2 (0.14-0ubuntu2) UNRELEASED; urgency=low
 
   * Inline packaging metadata.
 
