--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+signon-plugin-oauth2 (0.20-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+    - OAuth 2.0: follow the spec more closely, add Vimeo support
+    - Tests: increase test coverage
+
+ -- Alberto Mardegan <alberto.mardegan@canonical.com>  Thu, 11 Sep 2014 12:55:35 +0300
+
 signon-plugin-oauth2 (0.19+14.10.20140513-0ubuntu1) utopic; urgency=low
 
   [ Ubuntu daily release ]
