--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+signon-plugin-oauth2 (0.21+15.04.20150128-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Remove dependency on signon-ui (LP: #1362640)
+
+ -- Alberto Mardegan <alberto.mardegan@canonical.com>  Thu, 19 Mar 2015 13:10:38 +0300
+
 signon-plugin-oauth2 (0.21+15.04.20150128-0ubuntu1) vivid; urgency=medium
 
   [ Alberto Mardegan ]
