--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ signon-plugin-oauth2 (0.24-0ubuntu1) UNRELEASED; urgency=medium
     - OAuth2: allow token URL to be on a different host (LP: #1588210)
     - OAuth2: accept replies carrying text/html content type (LP: #1438393)
     - Enable CI on gitlab.com
+  * debian/control, debian/rules:
+    - Don't run tests in dbus-test-runner
+    - Update link to project homepage
 
  -- Alberto Mardegan <alberto.mardegan@canonical.com>  Thu, 02 Jun 2016 12:55:49 +0300
 
